--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -16,4 +16,4 @@ jobs:
         run: npm install
 
       - name: Check Prettier formatting
-        run: npx prettier --check .
+        run: npx prettier --check "**/*.{js,html,css}"
