--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,11 +1,11 @@
-name: Prettier Check
+name: Prettier Formatting
 
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  build:
+  prettier-format:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,5 +15,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Check Prettier formatting
-        run: npx prettier --check "**/*.{js,html,css}"
+      - name: Format files with Prettier
+        run: npx prettier --write "**/*.{js,html,css}"
