--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "stylelint-config-standard": "^36.0.0"
   }
 }
