--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -1,4 +1,4 @@
-name: Prettier Check
+name: style-check
 
 on:
   pull_request:
@@ -8,15 +8,21 @@ on:
       - main
 
 jobs:
-  build:
+  prettier-style-check:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Install dependencies
         run: npm install
-
       - name: Check Prettier formatting
         run: npx prettier --check "**/*.{js,html,css}"
+  stylelint-style-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Check Stylelint rules
+        run: npx stylelint "**/*.{css,scss}"
