--- a/.github/workflows/server-run-check.yml
+++ b/.github/workflows/server-run-check.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 'current'
+          node-version: '20.x'
 
       - name: Install dependencies
         run: npm install
