--- a/.github/workflows/server-run-check.yml
+++ b/.github/workflows/server-run-check.yml
@@ -19,8 +19,16 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run server
-        run: node server.js
+      - name: Start server and check
+        run: |
+        node server.js &
+        sleep 5 # Подождать несколько секунд для запуска сервера
+        if curl --output /dev/null --silent --head --fail http://localhost:3000; then
+          echo "Server is running"
+        else
+          echo "Server failed to start"
+          exit 1
+        fi
+      - name: Stop server
+      run: |
+        kill $(lsof -t -i:3000) # Остановить сервер по порту 3000
