--- a/.github/workflows/server-run-check.yml
+++ b/.github/workflows/server-run-check.yml
@@ -13,15 +13,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '20.x'
-
       - name: Start server and check
         run: |
-        node server.js
+          node server.js
       - name: Stop server
-      run: |
-        kill $(lsof -t -i:3000) # Остановить сервер по порту 3000
+        run: |
+          kill $(lsof -t -i:3000)
