--- a/.github/workflows/server-run-check.yml
+++ b/.github/workflows/server-run-check.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '20.x'
+      - name: Install dependencies
+        run: |
+          npm install
       - name: Start server and check
         run: |
           node server.js
