--- a/.github/workflows/server-run-check.yml
+++ b/.github/workflows/server-run-check.yml
@@ -16,18 +16,25 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
+          node-version: '14.x'
       - name: Install dependencies
         run: |
           npm install
-      - name: Start server and check
+      - name: Start server
         run: |
           node server.js &
-          echo "Waiting for the server to start..."
-          until curl -sSf http://localhost:3000; do
-            echo "Server is not yet available. Retrying..."
-            sleep 5
-          done
+          sleep 5
+      - name: Check server and error handling
+        run: |
+          echo "Checking server status..."
+          if ! curl -sSf http://localhost:3000; then
+            echo "Server is not running properly."
+            exit 1
+          fi
+          if pgrep -f "node server.js" && curl -sSf http://localhost:3000 | grep -q "SyntaxError: Invalid regular expression"; then
+            echo "Error encountered while starting server."
+            exit 1
+          fi
           echo "Server is running."
       - name: Stop server
         run: |
