--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/
 package-lock.json
-ImgSets/*
-!ImgSets/dark\ pics/
-!ImgSets/snow\ pics/
+public/imgSets/*
+!imgSets/dark pics/
+!imgSets/snow pics/
